BuildHughes/translation-tool/inputs/source_meta/objects/Offer_Satellite__c.object
<CustomObject>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <referenceTo>Offers__c</referenceTo>
        <relationshipLabel>Offer Satellites</relationshipLabel>
        <relationshipName>Offer_Satellites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satellite__c</fullName>
        <label>Satellite</label>
        <referenceTo>Satellite__c</referenceTo>
        <relationshipLabel>Offer Satellites</relationshipLabel>
        <relationshipName>Offer_Satellites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Offer Satellite</label>
    <nameField>
        <displayFormat>OffeSat-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Satellites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>